{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 41,
  "lineage": "f2c7fc6f-cfb9-f9e2-92fb-2d80e5177032",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three-tier-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ccfe17ffee543401",
            "domain": "vpc",
            "id": "eipalloc-0ccfe17ffee543401",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-16-48-52.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.16.48.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:internet-gateway/igw-00c8e12bbb4dbcfe2",
            "id": "igw-00c8e12bbb4dbcfe2",
            "owner_id": "025066239846",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three-tier-web-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:025066239846:targetgroup/three-tier-web-lb-tg/1fda9d25182f7fb1",
            "arn_suffix": "targetgroup/three-tier-web-lb-tg/1fda9d25182f7fb1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:025066239846:targetgroup/three-tier-web-lb-tg/1fda9d25182f7fb1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:route-table/rtb-0e9fe51b295d6f6d4",
            "id": "rtb-0e9fe51b295d6f6d4",
            "owner_id": "025066239846",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c8e12bbb4dbcfe2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-web-rt"
            },
            "tags_all": {
              "Name": "three-tier-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:security-group/sg-071a171407660a0f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071a171407660a0f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240806125858046900000001",
            "name_prefix": "terraform-",
            "owner_id": "025066239846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-1"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:security-group/sg-0999cf825143419f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999cf825143419f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240806125858046900000002",
            "name_prefix": "terraform-",
            "owner_id": "025066239846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Name": "three-tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:security-group/sg-08673c863bbb6a8ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08673c863bbb6a8ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240806125858312300000003",
            "name_prefix": "terraform-",
            "owner_id": "025066239846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:security-group/sg-06d278a6607523e9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d278a6607523e9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240806125858590300000004",
            "name_prefix": "terraform-",
            "owner_id": "025066239846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045c4d4223c3a982"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025066239846:vpc/vpc-0045c4d4223c3a982",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0527df4728a390367",
            "default_route_table_id": "rtb-0dbff136c97e968b9",
            "default_security_group_id": "sg-065e492b81bc15ab1",
            "dhcp_options_id": "dopt-0401d06ecbe0bff98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0045c4d4223c3a982",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dbff136c97e968b9",
            "owner_id": "025066239846",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}